<resources>
    <string name="app_name">Lista zakupów</string>
    <string name="bread">Chleb</string>
    <string name="potato">Ziemniak</string>
    <string name="tomato">Pomidor</string>
    <string name="water">Woda</string>
    <string name="cheese">Ser</string>
    <string name="onion">Cebula</string>
    <string name="pork">Schab</string>
    <string name="egg">Jajo</string>
    <string name="flour">Mąka</string>
    <string name="milk">Mleko</string>
    <string name="kg">kg</string>
    <string name="ml">ml</string>
    <string name="pc">szt</string>
    <string name="open">Otwórz</string>
    <string name="add">Dodaj</string>
    <string name="shop_lists">Listy zakupów</string>
    <string name="new_shop_list">Nowa lista zakupów</string>
    <string name="insert_shop_list_name">Wprowadź nazwę listy</string>
    <string name="enter">Zatwierdź</string>
    <string name="back">Cofnij</string>
    <string name="newList">nowa</string>
    <string name="partially_completed">częściowo zrealizowana</string>
    <string name="completed">zrealizowana</string>
    <string name="products">Produkty</string>
    <string name="how_many_products">produktów</string>
    <string name="bought">Kupione</string>
    <string name="select_product">Wybierz produkt</string>
    <string name="product_details">Szczegóły produktu</string>
    <string name="to_buy">Do kupienia</string>
    <string name="new_product">Nowy produkt</string>
    <string name="insert_product_name">Wprowadź nazwę produktu</string>
    <string name="define_unit_measure">Zdefiniuj jednostkę miary</string>
    <string name="previous">Cofnij</string>
    <string name="question_delete">Czy chcesz usunąć ten obiekt?</string>
    <string name="yes">tak</string>
    <string name="no">nie</string>
    <string name="already_exists">Taki przedmiot już istnieje</string>
</resources>
