<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context="com.app.fiche.shoppinglist.AddShopListActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:text="@string/new_product"
        android:gravity="center"
        android:textSize="25sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:hint="@string/insert_product_name"
        android:id="@+id/new_item_edit_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:weightSum="90">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="40"
            android:text="@string/define_unit_measure"
            android:gravity="center"
            android:textSize="15sp"/>
        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="horizontal"
            android:id="@+id/new_product_radio_group">
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/kg"
                    android:id="@+id/new_product_radio_kg"/>
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/ml"
                    android:id="@+id/new_product_radio_ml"/>
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/pc"
                    android:id="@+id/new_product_radio_pc"/>

        </RadioGroup>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:text="@string/enter"
        android:gravity="center"
        android:id="@+id/add_unique_new_product"/>


</LinearLayout>
