<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context="com.app.fiche.shoppinglist.AddShopListActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:text="@string/new_shop_list"
        android:gravity="center"
        android:textSize="25sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:hint="@string/insert_shop_list_name"
        android:id="@+id/add_new_shop_list_edit_text"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:text="@string/enter"
        android:gravity="center"
        android:id="@+id/add_new_shop_list_button"/>


</LinearLayout>
